--- a/qmanager-authentication-service/src/main/resources/application.properties
+++ b/qmanager-authentication-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port = 5000
+
+#MARIADB
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mariadb://mariaDB:3306/users_db
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
