--- a/qmanager-authentication-service/src/main/resources/application.properties
+++ b/qmanager-authentication-service/src/main/resources/application.properties
@@ -1,9 +1,23 @@
 server.port = 5000
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
 
 #MARIADB
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mariadb://mariaDB:3306/users_db
+spring.datasource.url=jdbc:mariadb://mariaDB:3306/app
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
+
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+
+# Initialize the datasource with available DDL and DML scripts
+spring.datasource.initialization-mode=always
+
+## Jackson Properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+spring.jackson.time-zone= UTC
+
+## App Properties
