--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,19 @@ services:
     ports:
       - 5050:80
 
+  frontend:
+    container_name: mgr-frontend
+    build:
+      context: ./frontend/mgr-frontend
+      dockerfile: Dockerfile
+    volumes:
+      - './frontend/mgr-frontend:/app'
+      - '/app/node_modules'
+    ports:
+      - '3001:3000'
+    environment:
+      - NODE_ENV=development
+
   qmanager-authentication-service:
     container_name: qmanager-authentication-service
     stdin_open: true
