--- a/frontend/mgr-frontend/Dockerfile
+++ b/frontend/mgr-frontend/Dockerfile
@@ -9,6 +9,6 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 COPY package.json /app/package.json
 RUN npm install
-RUN npm install react-scripts@3.0.1 -g
+RUN npm install -g create-react-app@3.0.1
 
 CMD ["npm", "start"]
