--- a/frontend/mgr-frontend/package.json
+++ b/frontend/mgr-frontend/package.json
@@ -6,7 +6,11 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +29,5 @@
     ],
     "development": []
   },
-  "devDependencies": {
-    "webpack": "^4.34.0"
-  }
+  "devDependencies": {}
 }
