Add mongo container and implement mongo user services

--- a/qmanager-authentication-service/src/main/resources/application.properties
+++ b/qmanager-authentication-service/src/main/resources/application.properties
@@ -11,8 +11,16 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name= org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 
+#MMONGODB
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=admin
+spring.data.mongodb.username=root
+spring.data.mongodb.password=example
+
 ## Hibernate Logging
-logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.springframework.data=debug
+logging.level.=error
 
 # Initialize the datasource with available DDL and DML scripts
 spring.datasource.initialization-mode=always
@@ -20,4 +28,3 @@ spring.datasource.initialization-mode=always
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
-
