--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,30 @@ services:
     ports:
       - 5050:80
 
+  mongo:
+    build:
+      context: ./mongoDB
+      dockerfile: Dockerfile
+    container_name: mongodb
+    restart: always
+    hostname: mongodb
+    ports:
+      - 27017:27017
+      - 28017:28017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: admin
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+
   qmanager-authentication-service:
     container_name: qmanager-authentication-service
     stdin_open: true
