--- a/qmanager-authentication-service/pom.xml
+++ b/qmanager-authentication-service/pom.xml
@@ -35,6 +35,10 @@
             <version>1.2.17</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <version>2.4.1</version>
