Add support to mongo database

--- a/mongoDB/Dockerfile
+++ b/mongoDB/Dockerfile
@@ -11,11 +11,9 @@ FROM mongo
 # Define working directory.
 WORKDIR /data
 RUN sed -i "s/.*bindIp.*/bindIp: 0.0.0.0/" /etc/mongod.conf.orig
+COPY dump.js /docker-entrypoint-initdb.d/
 # Define default command.
 CMD ["mongod"]
 
-# Expose ports.
-#   - 27017: process
-#   - 28017: http
 EXPOSE 27017
 EXPOSE 28017
