Add dumping initial data to mongo container

--- a/mongoDB/Dockerfile
+++ b/mongoDB/Dockerfile
@@ -1,19 +1,13 @@
-#
-# MongoDB Dockerfile
-#
-# https://github.com/dockerfile/mongodb
-#
-
-# Pull base image.
 FROM mongo
 
-
-# Define working directory.
 WORKDIR /data
-RUN sed -i "s/.*bindIp.*/bindIp: 0.0.0.0/" /etc/mongod.conf.orig
-COPY dump.js /docker-entrypoint-initdb.d/
-# Define default command.
-CMD ["mongod"]
+
+COPY dump.js .
+COPY entrypoint.sh /entrypoint.sh
+
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
 
 EXPOSE 27017
 EXPOSE 28017
+
