--- a/qmanager-authentication-service/src/main/resources/application.properties
+++ b/qmanager-authentication-service/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.jpa.hibernate.ddl-auto=validate
 #MMONGODB
 spring.data.mongodb.host=mongodb
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=admin
-spring.data.mongodb.username=root
-spring.data.mongodb.password=example
+spring.data.mongodb.database=app
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin
 
 ## Hibernate Logging
 logging.level.org.springframework.data=debug
